--- a/Src/Grability/Base.lproj/Main.storyboard
+++ b/Src/Grability/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pQ9-92-f0a">
-                                <rect key="frame" x="0.0" y="20" width="600" height="52"/>
+                                <rect key="frame" x="0.0" y="30" width="600" height="52"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WnO-e2-1xk">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
@@ -93,10 +93,10 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="gpI-Iy-DXu">
-                                <rect key="frame" x="0.0" y="97" width="600" height="503"/>
+                                <rect key="frame" x="0.0" y="107" width="600" height="493"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uZF-Hc-5wU">
-                                    <size key="itemSize" width="580" height="80"/>
+                                    <size key="itemSize" width="380" height="80"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -106,7 +106,7 @@
                                         <rect key="frame" x="10" y="0.0" width="580" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="580" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="400" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B37-pr-ZBf">
@@ -123,10 +123,15 @@
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="B37-pr-ZBf" secondAttribute="trailing" constant="10" id="YxS-9m-jvJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="B37-pr-ZBf" secondAttribute="trailing" constant="10" id="YxS-9m-jvJ">
+                                                <variation key="heightClass=regular-widthClass=compact" constant="15"/>
+                                            </constraint>
                                             <constraint firstItem="B37-pr-ZBf" firstAttribute="top" secondItem="fhl-Aw-55n" secondAttribute="top" id="m5Y-lQ-QW2"/>
-                                            <constraint firstItem="B37-pr-ZBf" firstAttribute="leading" secondItem="fhl-Aw-55n" secondAttribute="leading" constant="10" id="wEk-yc-gVj"/>
+                                            <constraint firstItem="B37-pr-ZBf" firstAttribute="leading" secondItem="fhl-Aw-55n" secondAttribute="leading" constant="10" id="wEk-yc-gVj">
+                                                <variation key="heightClass=regular-widthClass=compact" constant="15"/>
+                                            </constraint>
                                         </constraints>
+                                        <size key="customSize" width="400" height="80"/>
                                         <connections>
                                             <outlet property="labelCategoryName" destination="B37-pr-ZBf" id="qit-Y3-7aB"/>
                                         </connections>
@@ -144,6 +149,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="pQ9-92-f0a" firstAttribute="top" secondItem="os9-Ab-DP3" secondAttribute="bottom" constant="10" id="7wB-rJ-Ahy"/>
                             <constraint firstAttribute="trailing" secondItem="gpI-Iy-DXu" secondAttribute="trailing" id="A7b-Uv-mUt"/>
                             <constraint firstItem="pQ9-92-f0a" firstAttribute="leading" secondItem="GNm-MY-knK" secondAttribute="leading" id="C3U-VB-rWf"/>
                             <constraint firstItem="gpI-Iy-DXu" firstAttribute="top" secondItem="pQ9-92-f0a" secondAttribute="bottom" constant="25" id="F7J-Cc-0GK"/>
@@ -151,9 +157,14 @@
                             <constraint firstAttribute="trailing" secondItem="pQ9-92-f0a" secondAttribute="trailing" id="coA-wm-tX6"/>
                             <constraint firstItem="gpI-Iy-DXu" firstAttribute="leading" secondItem="GNm-MY-knK" secondAttribute="leading" id="dJy-2j-4T3"/>
                             <constraint firstItem="Zt3-YL-hr2" firstAttribute="top" secondItem="gpI-Iy-DXu" secondAttribute="bottom" id="fmk-kT-CtE"/>
-                            <constraint firstItem="pQ9-92-f0a" firstAttribute="top" secondItem="os9-Ab-DP3" secondAttribute="bottom" id="j4c-gt-eZW"/>
+                            <constraint firstItem="pQ9-92-f0a" firstAttribute="top" secondItem="os9-Ab-DP3" secondAttribute="bottom" constant="10" id="j4c-gt-eZW"/>
                             <constraint firstItem="CkZ-jv-OvX" firstAttribute="centerY" secondItem="GNm-MY-knK" secondAttribute="centerY" id="o96-g2-QrD"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="j4c-gt-eZW"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="activityIndCategories" destination="CkZ-jv-OvX" id="OyF-fX-Pjd"/>
@@ -162,7 +173,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lDo-lb-5PT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="977" y="338"/>
+            <point key="canvasLocation" x="888" y="337.5"/>
         </scene>
     </scenes>
 </document>
