--- a/Src/Grability/Base.lproj/Main.storyboard
+++ b/Src/Grability/Base.lproj/Main.storyboard
@@ -96,20 +96,20 @@
                                 <rect key="frame" x="0.0" y="107" width="600" height="493"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uZF-Hc-5wU">
-                                    <size key="itemSize" width="380" height="80"/>
+                                    <size key="itemSize" width="359" height="80"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="fhl-Aw-55n" customClass="CategoryCell" customModule="Grability" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="0.0" width="580" height="80"/>
+                                        <rect key="frame" x="100" y="0.0" width="400" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="400" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="359" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B37-pr-ZBf">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Category name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B37-pr-ZBf">
                                                     <rect key="frame" x="10" y="0.0" width="560" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="0ZW-ZY-bqm"/>
@@ -124,14 +124,14 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="B37-pr-ZBf" secondAttribute="trailing" constant="10" id="YxS-9m-jvJ">
-                                                <variation key="heightClass=regular-widthClass=compact" constant="15"/>
+                                                <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                                             </constraint>
                                             <constraint firstItem="B37-pr-ZBf" firstAttribute="top" secondItem="fhl-Aw-55n" secondAttribute="top" id="m5Y-lQ-QW2"/>
                                             <constraint firstItem="B37-pr-ZBf" firstAttribute="leading" secondItem="fhl-Aw-55n" secondAttribute="leading" constant="10" id="wEk-yc-gVj">
-                                                <variation key="heightClass=regular-widthClass=compact" constant="15"/>
+                                                <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                                             </constraint>
                                         </constraints>
-                                        <size key="customSize" width="400" height="80"/>
+                                        <size key="customSize" width="359" height="80"/>
                                         <connections>
                                             <outlet property="labelCategoryName" destination="B37-pr-ZBf" id="qit-Y3-7aB"/>
                                         </connections>
@@ -173,7 +173,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lDo-lb-5PT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="888" y="337.5"/>
+            <point key="canvasLocation" x="1269" y="147"/>
         </scene>
     </scenes>
 </document>
