--- a/Src/Grability/Base.lproj/LaunchScreen.storyboard
+++ b/Src/Grability/Base.lproj/LaunchScreen.storyboard
@@ -33,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.80000000000000004" green="1" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="LTW-hm-PIE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UOj-3p-ntI"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="qfk-yW-mE3" secondAttribute="bottom" constant="8" id="a3T-RE-Wbh"/>
