--- a/Src/Grability/Base.lproj/Main.storyboard
+++ b/Src/Grability/Base.lproj/Main.storyboard
@@ -133,21 +133,21 @@
                                 <rect key="frame" x="290" y="290" width="20" height="20"/>
                                 <color key="color" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             </activityIndicatorView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BookDetailBg2.png" translatesAutoresizingMaskIntoConstraints="NO" id="bcL-oS-pVi">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppsListBGImg.png" translatesAutoresizingMaskIntoConstraints="NO" id="bcL-oS-pVi">
                                 <rect key="frame" x="0.0" y="83" width="600" height="509"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="t8Z-Ok-MEQ">
-                                <rect key="frame" x="20" y="108" width="560" height="469"/>
+                                <rect key="frame" x="20" y="96" width="560" height="481"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="6" id="D6u-e8-qF3">
                                     <size key="itemSize" width="85" height="148"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="50" height="10"/>
+                                    <size key="footerReferenceSize" width="0.0" height="10"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AppCell" id="WWf-9a-oud" customClass="AppCell" customModule="Grability" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="85" height="148"/>
+                                        <rect key="frame" x="0.0" y="10" width="85" height="148"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="85" height="148"/>
@@ -160,7 +160,7 @@
                                                         <constraint firstAttribute="width" constant="85" id="ssM-N7-JbV"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App name App nameApp name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbk-YW-4y0">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App name App nameApp name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbk-YW-4y0">
                                                     <rect key="frame" x="0.0" y="84" width="85" height="42"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
@@ -170,7 +170,7 @@
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ySs-ou-Pw5">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ySs-ou-Pw5">
                                                     <rect key="frame" x="0.0" y="119" width="85" height="21"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
@@ -186,8 +186,12 @@
                                             <constraint firstItem="tbk-YW-4y0" firstAttribute="top" secondItem="WWf-9a-oud" secondAttribute="top" constant="84" id="EED-GQ-k68"/>
                                             <constraint firstAttribute="trailing" secondItem="scL-gB-v1Z" secondAttribute="trailing" id="EvU-Wi-6gd"/>
                                             <constraint firstItem="scL-gB-v1Z" firstAttribute="top" secondItem="WWf-9a-oud" secondAttribute="top" id="H8d-eC-fQr"/>
+                                            <constraint firstItem="ySs-ou-Pw5" firstAttribute="top" secondItem="tbk-YW-4y0" secondAttribute="bottom" constant="-7" id="Py9-Lu-Cpy"/>
+                                            <constraint firstAttribute="trailing" secondItem="ySs-ou-Pw5" secondAttribute="trailing" id="VmG-BT-gaD"/>
                                             <constraint firstItem="scL-gB-v1Z" firstAttribute="leading" secondItem="WWf-9a-oud" secondAttribute="leading" id="g5Z-yr-lI9"/>
+                                            <constraint firstItem="ySs-ou-Pw5" firstAttribute="leading" secondItem="WWf-9a-oud" secondAttribute="leading" id="le8-00-51O"/>
                                             <constraint firstItem="tbk-YW-4y0" firstAttribute="leading" secondItem="WWf-9a-oud" secondAttribute="leading" id="rfB-wf-sCo"/>
+                                            <constraint firstAttribute="bottom" secondItem="ySs-ou-Pw5" secondAttribute="bottom" constant="8" id="yQy-kD-Jix"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="imageViewAppImg" destination="scL-gB-v1Z" id="Aoa-Wl-bpv"/>
@@ -196,6 +200,14 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1o9-EA-Il2">
+                                    <rect key="frame" x="0.0" y="0.0" width="560" height="10"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionReusableView>
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="0yR-9Y-zNg">
+                                    <rect key="frame" x="0.0" y="158" width="560" height="10"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="YXf-Dy-CEA" id="i1Y-jf-LiJ"/>
                                     <outlet property="delegate" destination="YXf-Dy-CEA" id="DQO-Iz-gd2"/>
@@ -205,7 +217,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Tdc-pl-HX5" firstAttribute="top" secondItem="t8Z-Ok-MEQ" secondAttribute="bottom" constant="23" id="2L7-1e-gf5"/>
-                            <constraint firstItem="t8Z-Ok-MEQ" firstAttribute="top" secondItem="2PO-Ru-V86" secondAttribute="bottom" constant="44" id="9co-nx-1pT"/>
+                            <constraint firstItem="t8Z-Ok-MEQ" firstAttribute="top" secondItem="2PO-Ru-V86" secondAttribute="bottom" constant="32" id="9co-nx-1pT"/>
                             <constraint firstItem="up8-l1-jNq" firstAttribute="centerY" secondItem="juY-oS-Zre" secondAttribute="centerY" id="CGx-Yd-pTR"/>
                             <constraint firstAttribute="trailing" secondItem="bcL-oS-pVi" secondAttribute="trailing" id="Ilj-Nf-vCm"/>
                             <constraint firstItem="t8Z-Ok-MEQ" firstAttribute="top" secondItem="bcL-oS-pVi" secondAttribute="bottom" constant="-484" id="QTP-gT-tD2"/>
@@ -251,7 +263,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BookDetailBg2.png" width="603" height="564"/>
+        <image name="AppsListBGImg.png" width="564" height="603"/>
         <image name="placeholder.png" width="186" height="149"/>
     </resources>
 </document>
