--- a/Src/Grability/Base.lproj/Main.storyboard
+++ b/Src/Grability/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ff4-To-HpA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="9uB-gE-rfX">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -237,7 +237,7 @@
                     <navigationItem key="navigationItem" title="Category Name" id="zbC-eZ-Qqy"/>
                     <connections>
                         <outlet property="collectionViewAppsList" destination="t8Z-Ok-MEQ" id="MBa-rO-5Yv"/>
-                        <segue destination="ff4-To-HpA" kind="show" id="bqN-tJ-8iV"/>
+                        <segue destination="ff4-To-HpA" kind="show" identifier="goToAppSummary" id="bqN-tJ-8iV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TQv-aQ-Vgw" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -262,11 +262,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oVi-1E-a2e" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ZC-A1-g1d">
-                                                <rect key="frame" x="277" y="525" width="46" height="30"/>
-                                                <state key="normal" title="Button"/>
-                                            </button>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ldj-Ty-GaL">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="ldj-Ty-GaL">
                                                 <rect key="frame" x="8" y="87" width="120" height="120"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="120" id="8vR-Fn-C8r"/>
@@ -389,7 +385,6 @@
                                             <constraint firstItem="Wr8-CU-XcV" firstAttribute="top" secondItem="pRQ-Fc-I2J" secondAttribute="bottom" constant="61" id="C35-Gf-t8h"/>
                                             <constraint firstItem="0b2-wU-ECK" firstAttribute="leading" secondItem="oVi-1E-a2e" secondAttribute="leading" constant="8" id="FK7-U9-J99"/>
                                             <constraint firstItem="mfK-RS-ENG" firstAttribute="top" secondItem="I1G-Yp-Iob" secondAttribute="bottom" constant="19" id="Gi6-di-TqM"/>
-                                            <constraint firstAttribute="bottom" secondItem="1ZC-A1-g1d" secondAttribute="bottom" constant="45" id="JiT-3V-wtQ"/>
                                             <constraint firstItem="UbT-2l-lD4" firstAttribute="top" secondItem="PYL-0M-oOY" secondAttribute="bottom" constant="10" id="LWV-sC-fPC"/>
                                             <constraint firstItem="Z1W-E9-6OX" firstAttribute="leading" secondItem="oVi-1E-a2e" secondAttribute="leading" constant="8" id="Q9a-JW-e5y"/>
                                             <constraint firstItem="xX4-mk-9DQ" firstAttribute="leading" secondItem="MNJ-an-Wc0" secondAttribute="trailing" constant="17" id="RKm-FX-QQC"/>
@@ -399,7 +394,6 @@
                                             <constraint firstItem="e2l-F6-aze" firstAttribute="leading" secondItem="oVi-1E-a2e" secondAttribute="leading" constant="8" id="ava-3x-wKH"/>
                                             <constraint firstItem="PYL-0M-oOY" firstAttribute="top" secondItem="oVi-1E-a2e" secondAttribute="top" constant="87" id="cRH-ib-hBz"/>
                                             <constraint firstItem="Wr8-CU-XcV" firstAttribute="leading" secondItem="tJC-da-CQv" secondAttribute="trailing" constant="17" id="dDM-Gt-uLt"/>
-                                            <constraint firstItem="1ZC-A1-g1d" firstAttribute="centerX" secondItem="oVi-1E-a2e" secondAttribute="centerX" id="epJ-qD-otX"/>
                                             <constraint firstAttribute="trailing" secondItem="I1G-Yp-Iob" secondAttribute="trailing" constant="8" id="fbi-MB-L0R"/>
                                             <constraint firstItem="tJC-da-CQv" firstAttribute="top" secondItem="0b2-wU-ECK" secondAttribute="bottom" constant="10" id="ije-DJ-75v"/>
                                             <constraint firstItem="MNJ-an-Wc0" firstAttribute="leading" secondItem="oVi-1E-a2e" secondAttribute="leading" constant="8" id="j9c-bZ-jm8"/>
@@ -438,6 +432,17 @@
                             <constraint firstItem="oVi-1E-a2e" firstAttribute="width" secondItem="Ufs-5b-ypP" secondAttribute="width" id="pmf-rZ-LxM"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="buttonPrice" destination="Z1W-E9-6OX" id="HxD-hA-PkI"/>
+                        <outlet property="imageViewAppImg" destination="ldj-Ty-GaL" id="Lw5-oN-csa"/>
+                        <outlet property="labelAppDescription" destination="pRQ-Fc-I2J" id="PgK-JE-94L"/>
+                        <outlet property="labelAppName" destination="PYL-0M-oOY" id="Oo0-Ap-NG3"/>
+                        <outlet property="labelArtist" destination="UbT-2l-lD4" id="cbj-tb-OTb"/>
+                        <outlet property="labelCategoryName" destination="xX4-mk-9DQ" id="MBJ-ya-Fwx"/>
+                        <outlet property="labelReleaseDate" destination="I1G-Yp-Iob" id="dRY-3W-GiB"/>
+                        <outlet property="labelRights" destination="mfK-RS-ENG" id="I4O-lC-lfF"/>
+                        <outlet property="labelSellerName" destination="Wr8-CU-XcV" id="W5r-EE-lyN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U5I-Ea-and" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -459,7 +464,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1hf-Dj-JgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1178" y="147"/>
+            <point key="canvasLocation" x="1187" y="147"/>
         </scene>
     </scenes>
     <resources>
